# pfm

./: .gitignore  TODO.md  index2.html  main.css  pfm.code-workspace
manage/: dev_start
pfm-clojure/: .gitignore  CLAUDE.md  README.md  deps.edn  tests.edn
pfm-clojure/resources/migrations/: 001-create-transactions.sql
pfm-clojure/resources/sql/: transactions.sql
pfm-clojure/src/pfm/: core.clj  db.clj  handler.clj
pfm-clojure/src/pfm/db/: migrations.clj  transaction.clj
pfm-clojure/test/e2e/: e2e_test.clj
pfm-clojure/test/pfm/: db_test.clj  handler_test.clj  test_helpers.clj
pfm-elm/: .gitignore  README.md  elm-analyse.json  elm-doctest  elm.json  index.html  index2.html  index3.html  main.css  main2.css  package-lock.json  package.json  repl.expect  repl.session  repl.session.example  theme-toggle.js  ui.css  vite.config.js
pfm-elm/bug/: focus-issue-solved-orig.html  focus-issue-solved-styled.html  focus-issue.html
pfm-elm/manage/: dev_start  dev_start2  run_tests  watch_css
pfm-elm/src/: Dec.elm  Dec2.elm  Decimal.elm  Domain.elm  Main.elm  Main2.elm  Route.elm  Utils.elm  main.js  main2.js
pfm-elm/src/Page/: Budgets.elm  UI.elm
pfm-elm/src/Page/Budget/: Edit.elm  List.elm
pfm-elm/tests/: DecTest.elm  DecimalPropertyTest.elm  DecimalTest.elm
pfm-golang/: README.md  go.mod  go.sum  query.sql  sqlc.yaml
pfm-golang/.claude/: settings.local.json
pfm-golang/cmd/server/: main.go
pfm-golang/internal/database/: db.go  schema.sql  seed.sql
pfm-golang/internal/handlers/: categories.templ  categories_templ.go  handlers.go  hello.templ  hello_templ.go
pfm-golang/internal/utils/: must.go
pfm-golang/manage/: compile_all
pfm-golang/queries/: models.go  query.sql.go
pfm-haskell-happstack/: README.md  package.yaml  pfm-haskell-happstack.cabal
pfm-haskell-hyperbole/: pfm-haskell-hyperbole.cabal
pfm-haskell-hyperbole/app/: Main.hs
pfm-haskell-hyperbole/assets/css/: main.css
pfm-haskell-hyperbole/lib/dev-reload/: DevReload.hs  devReloadPage.js
pfm-haskell-twain/: .gitignore  .hlint.yaml  cabal.project  cspell.json  hie.yaml  hie.yaml.off  pfm-haskell-twain.cabal
pfm-haskell-twain/app/: ElmExport.hs  Main.hs  Server.hs  Server.http  Server2.hs
pfm-haskell-twain/app/DB/: Category.hs  LedgerView.hs  User.hs  UserBeam.hs
pfm-haskell-twain/app/DB/Accounts/: Queries.hs  getAll.sql
pfm-haskell-twain/app/DB/Category/: Queries.hs
pfm-haskell-twain/app/DB/LedgerView/: Queries.hs  getLedgerViewRows.sql
pfm-haskell-twain/app/DB/Transactions/: Queries.hs  delete.sql  insert.sql  update.sql
pfm-haskell-twain/app/DB/User/: Queries.hs
pfm-haskell-twain/app/DTO/: AccountRead.hs  Category.hs  Ledger.hs  TransactionWrite.hs  User.hs  Utils.hs
pfm-haskell-twain/app/Domain/: Category.hs  Ledger.hs  User.hs
pfm-haskell-twain/explore/: Classify.hs  Similarity.hs  similarity.rb
pfm-haskell-twain/manage/dev/: repl
pfm-haskell-twain/sql/: README.md  TODO.md  get_users.sql  init.sql  wip.sql  wip2.sql  wip3.sql  wip4.sql  wip4a.sql  wip4aa.sql  wip4ab.sql  wip5.sql  wip6.sql
pfm-haskell-twain/src/: ElmExport.hs  Hello.hs  OfxParser.hs  Server.hs  Server.http
pfm-haskell-twain/src/DB/Accounts/: Queries.hs  getAll.sql  getBalance.sql
pfm-haskell-twain/src/DB/Budgets/: JSON.hs  Queries.hs  getAll.sql  getBudgetIdForDate.sql  getOne.sql  selectAll.sql
pfm-haskell-twain/src/DB/Categories/: Queries.hs  getAll.sql
pfm-haskell-twain/src/DB/Category/: Queries.hs  getNonStale.sql
pfm-haskell-twain/src/DB/LedgerView/: Queries.hs  getLedgerViewRows.sql
pfm-haskell-twain/src/DB/Transactions/: Queries.hs  insert.sql  suggest.sql  suggestions.sql
pfm-haskell-twain/src/DB/User/: Queries.hs  getNewPlatformUsers.sql
pfm-haskell-twain/src/DTO/: AccountRead.hs  Category.hs  Ledger.hs  TransactionWrite.hs  User.hs  Utils.hs
pfm-haskell-twain/test/: Spec.hs
pfm-ocaml/: .gitignore  .ocamlformat
pfm-ocaml/src/: app.ml  main.ml
pfm-ps-halogen/: .gitignore  README.md  package-lock.json  package.json  packages.dhall  spago.dhall
pfm-ps-halogen/dev/: index.html  index2.html  index2.js  main.css
pfm-ps-halogen/src/: Main.js  Main.purs  Main2.purs
pfm-purescript/: .gitignore  .purs-repl  CLAUDE.md  CLAUDE.todo.md  TRANSACTION_ISOLATION_STATUS.md  contextMenuExample.html  cspell.json  index.html  index2.html  index3.html  index4.html  main.css  package-lock.json  package.json  packages.dhall  playwright.config.js  spago.dhall  sse-test.js
pfm-purescript/.claude/: settings.local.json
pfm-purescript/.claude/agents/: tdd-implementation.md  tdd-test-writer.md
pfm-purescript/dev/: README-halogen-debug.md  halogen-debug.js  test-halogen-debug.html
pfm-purescript/manage/: server
pfm-purescript/src/: Main2.js  Main2.purs  Main3.purs  Main4.purs  WIP.purs
pfm-purescript/src/Client/: Main.js  Main.purs
pfm-purescript/src/Server/: Conversion.purs  Database.purs  DateFormat.js  DateFormat.purs  Main.purs  OfxParser.purs  SSE.js  SSE.purs
pfm-purescript/src/Server/DB/: Account.purs  Budget.purs  Category.purs  LedgerView.purs  Transaction.purs  Utils.purs
pfm-purescript/src/Shared/: Types.purs
pfm-purescript/test/: Main.js  Main.purs
pfm-purescript/test/Api/: Spec.purs
pfm-purescript/test/Database/: Spec.purs  TestUtils.purs
pfm-purescript/test/OfxParser/: Spec.purs  fixture.ofx
pfm-purescript/test/e2e/: app.spec.js  suggestions.spec.js
pfm-purescript/tests/e2e/: app.spec.js
pfm-ts-node-react/: CLAUDE.md  TODO.md
pfm-ts-node-react/.claude/: settings.local.json
pfm-ts-node-react/explore/: Trie.hs  VerbFirstTrie.hs
pfm-ts-node-react/front/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
pfm-ts-node-react/front/src/: App.tsx  hooks.ts  main.css  main.tsx  store.ts  vite-env.d.ts
pfm-ts-node-react/server/: .eslintrc.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
pfm-ts-node-react/server/src/: index.ts  main.test.ts  main.ts
pfm-ts-node-react/shared/: repos.ts  schemas.ts  types.ts
src/: Main.elm
(+64 files in other folders)
