cabal-version:      3.0

name:               pfm-haskell-twain
version:            0.1.0.0
synopsis:
description:
license:            NONE
author:
maintainer:
copyright:
build-type:         Simple
extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions: ImportQualifiedPost

executable pfm-haskell-twain
    import:           warnings
    import:           extensions
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
                    , pfm-haskell-twain-lib

    hs-source-dirs:   app
    default-language: Haskell2010

library pfm-haskell-twain-lib
    import:           warnings
    import:           extensions
    hs-source-dirs:   src
    exposed-modules:  Server
                    , ElmExport
                    , OfxParser
                    , DB.User.Queries
                    , DB.Category.Queries
                    , DB.LedgerView.Queries
                    , DB.Transactions.Queries
                    , DB.Accounts.Queries
                    , DTO.AccountRead
                    , DTO.Utils
                    , DTO.TransactionWrite
                    , DTO.User
                    , DTO.Category
                    , DTO.Ledger
    build-depends:    base ^>=4.18.3.0
                    , aeson
                    , bytestring
                    , Decimal
                    , elm-street
                    , file-embed
                    , http-types
                    , megaparsec
                    , pretty-simple
                    , raw-strings-qq
                    , sqlite-simple
                    , text
                    , time
                    , twain
                    , wai-extra
                    , warp


    default-language: Haskell2010


test-suite pfm-haskell-twain-test
    import:           warnings
    import:           extensions
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base ^>=4.18.3.0
                    , pfm-haskell-twain-lib
                    , text
                    , time
                    , megaparsec
                    , hspec
                    , Decimal
                    , raw-strings-qq
    default-language: Haskell2010

-- https://jade.fyi/blog/cabal-test-dev-trick/
-- ghcid -c "cabal repl test:test-dev" -T :main
test-suite test-dev
    import:           warnings
    import:           extensions
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          Spec.hs
    other-modules:    OfxParser
    build-depends:    base ^>=4.18.3.0
                    -- test
                    , pfm-haskell-twain-lib
                    , text
                    , time
                    , megaparsec
                    , hspec
                    , Decimal
                    , raw-strings-qq
                    -- lib
                    , aeson
                    , bytestring
                    , Decimal
                    , elm-street
                    , file-embed
                    , http-types
                    , megaparsec
                    , pretty-simple
                    , raw-strings-qq
                    , sqlite-simple
                    , text
                    , time
                    , twain
                    , wai-extra
                    , warp
    default-language: Haskell2010

